syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message WeatherLocationResponse {
	float temp_C = 1;
	float temp_F = 2;
	float temp_K = 3;
}

message WeatherLocationRequest {
    string place = 1;
}

service WeatherService {
  rpc GetLocationTemperature(stream WeatherLocationRequest) returns (stream WeatherLocationResponse){};
}